Fixed the width of a link with overflowing text

--- a/css/style.css
+++ b/css/style.css
@@ -545,7 +545,7 @@ a{
                width: 28%;
                text-align: center;
                color: white;
-               font-size: 1.5em;
+               font-size: 1.3em;
                letter-spacing: 0.2em;
                transition: 0.3s;
                -webkit-box-shadow: 5px 5px 0px 0px rgba(0,0,0,0.75);
